fix bug and some thing???

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
+    <org.webrtc.SurfaceViewRenderer
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="invisible"
+        android:id="@+id/surfaceView"
+        app:layout_constraintBottom_toBottomOf="parent"/>
     <Button
         android:id="@+id/stop"
         android:layout_width="wrap_content"
